--- a/teste06/style.css
+++ b/teste06/style.css
@@ -42,7 +42,7 @@ header h1{
     gap: 40px;
     margin: auto;
     margin: 0px ;
-    margin-bottom: 10px;
+    margin-bottom: 7px;
     display: flex;
     transition: color 0.3s;
     font-weight: normal;
@@ -59,6 +59,7 @@ nav a:hover {
     color: black;
     width:150px;
     text-decoration: none;
+    border-radius: 7px;
 }
 
 #conteudo {
@@ -77,7 +78,7 @@ nav a:hover {
 }
 
 main h1{
-    background-image: linear-gradient(to right,#7fd0ff93, white);
+    background-image: linear-gradient(to right,#7fd0ff93, transparent);
     text-align: center;
     color: var(--cor04);
     background-color: var(--cor01);
@@ -132,6 +133,11 @@ footer p {
     color: white;
     text-align: center;
     font-weight: bold;
+}
+
+.redes {
+    margin-top: 7px;
+    padding: 5px;
 }
 
 .listas {
