--- a/teste06/style.css
+++ b/teste06/style.css
@@ -33,7 +33,7 @@ header h1{
 }
 
 .links {
-    height: 50px;
+    height: 45px;
     background-color: #3577a39c;
     justify-content: center;
     font-size: 30px;
@@ -42,10 +42,8 @@ header h1{
     padding: 10px;
     gap: 40px;
     margin: auto;
-    margin: 0px ;
     margin-bottom: 7px;
     display: flex;
-    transition: color 0.3s;
     font-weight: normal;
 }
 
@@ -59,7 +57,7 @@ nav a:hover {
     background-color: var(--cor03);
     color: black;
     width:150px;
-    text-decoration: none;
+    text-decoration: underline;
     border-radius: 7px;
 }
 
@@ -67,9 +65,6 @@ nav a:hover {
     background-color: #eef0f1;
     border-radius: 10px;
     text-align: justify;
-    margin-bottom: 10px;
-    margin-top: 25px;
-    border-radius: 10px;
     padding: 10px;
     min-width: 300px;
     max-width: 800px;
