--- a/teste06/style.css
+++ b/teste06/style.css
@@ -27,7 +27,7 @@ header {
 }
 header h1{
     text-align: center;
-    font-family: 'Bebas neue';
+    font-family: 'anton';
     font-size: 50px;
     font-weight: normal;
 }
@@ -74,6 +74,8 @@ nav a:hover {
 }
 
 main h1{
+    font-family: 'anton';
+    font-weight: normal;
     background-image: linear-gradient(to right,#7fd0ff93, transparent);
     text-align: center;
     color: var(--cor04);
