--- a/teste08/style.css
+++ b/teste08/style.css
@@ -1,5 +1,14 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passero+One&display=swap');
+
+:root {
+    --font1:'Edu NSW ACT Cursive', cursive;;
+    --font2:'Passero One', cursive;;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -17,8 +26,10 @@ header {
 }
 
 header h1 {
+    font-size: 10vw;
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
 }
 
 header p {
@@ -36,10 +47,16 @@ a:hover {
 }
 
 section {
-    padding-left: 30px;
+    font-family: var(--font1);
     line-height: 2em;
+    padding-left: 30px;
     padding-top: 10vh;
     padding-bottom: 10vh;
+    font-size: 4vw;
+}
+
+section p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -50,11 +67,26 @@ section.normal {
 section.imagem {
     background-color: rgb(87, 86, 86);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.322);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem p {
-    background-color: rgba(0, 0, 0, 0.418);
-    width: 400px;
+    background-color: rgba(0, 0, 0, 0.678);
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 2px 1px 0px rgba(0, 0, 0, 0.801);
+}
+    
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
