--- a/design imagens/style.css
+++ b/design imagens/style.css
@@ -54,7 +54,7 @@ section.imagens {
 
 section.imagens p {
     font-variant: small-caps;
-    font-size: 4vw;
+    font-size: 3vh;
     background-color: rgba(0, 0, 0, 0.527);
     display: inline-block;
     padding: 10px;
