--- a/teste06/style.css
+++ b/teste06/style.css
@@ -115,12 +115,11 @@ div.video {
 
 div.video iframe {
     position: absolute;
-    box-shadow: 1px 1px 1px black;
+    border-radius: 7px;
     top: 5%;
     left: 5%;
     width: 90%;
-    height: 90%;
-   
+    height: 91%;
 }
 
 footer {
